photokit (0.3.6) unstable; urgency=low
  * Add google image search

 -- LucasWang <wbsecg1@gmail.com>  Sun, 15 Jul 2012 04:32:57 +0800

photokit (0.3.3) unstable; urgency=low
  * Fix crash bug when send weibo ok

 -- LucasWang <wbsecg1@gmail.com>  Wed, 11 Jul 2012 16:17:14 +0800

photokit (0.3.2) unstable; urgency=low
  * <Add change description here>

 -- LucasWang <wbsecg1@gmail.com>  Wed, 11 Jul 2012 01:41:26 +0800

photokit (0.3.8) unstable; urgency=low
  * <Add change description here>

 -- LucasWang <wbsecg1@gmail.com>  Wed, 11 Jul 2012 01:40:55 +0800

photokit (0.3.0) unstable; urgency=low
  * Add weibo dialog and bug fix

 -- LucasWang <wbsecg1@gmail.com>  Tue, 10 Jul 2012 10:07:37 +0800


photokit (0.2.8) unstable; urgency=low
  * graphics dialogs.
  * exif support
  * bug fix

 -- LucasWang <wbsecg1@gmail.com>  Mon, 09 Jul 2012 12:17:26 +0800

photokit (0.2.7) unstable; urgency=low
  * <Add change description here>

 -- LucasWang <wbsecg1@gmail.com>  Mon, 09 Jul 2012 12:17:25 +0800

photokit (0.2.6) unstable; urgency=low
  * Fix large image page place center error
  * Add graphics buttons with animation

 -- LucasWang <wbsecg1@gmail.com>  Thu, 05 Jul 2012 11:08:23 +0800

photokit (0.2.4) unstable; urgency=low
  * <Add change description here>

 -- LucasWang <wbsecg1@gmail.com>  Thu, 05 Jul 2012 11:08:09 +0800

photokit (0.2.0) unstable; urgency=low
  * Zooming and moving support when viewing a single image
  * Startup animation
  * Show tips
  * Fix thumb size problem

 -- LucasWang <wbsecg1@gmail.com>  Tue, 03 Jul 2012 00:42:56 +0800

photokit (0.2.2) unstable; urgency=low
  * <Add change description here>

 -- LucasWang <wbsecg1@gmail.com>  Tue, 03 Jul 2012 00:42:53 +0800

photokit (0.1.2) unstable; urgency=low
  * <Add change description here>

 -- LucasWang <wbsecg1@gmail.com>  Tue, 03 Jul 2012 00:42:27 +0800

photokit (0.1.0) unstable; urgency=low
  * base functions done

 -- LucasWang <wbsecg1@gmail.com>  Sat, 30 Jun 2012 22:39:12 +0800
