@@ -10,6 +10,6 @@ Package: photokit
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: A photo browser with 3D effects. Support share to weibo
- PhotoKit is a photo braowser with impressive 3D effects and many slide effects. Support view EXIF. You can share the image to sina weibo easily with it.
+ PhotoKit is a photo braowser with impressive 3D effects and many slide effects. Support view EXIF. You can share the image to sina weibo easily with it. Google image search is supported.
 XSBC-Maemo-Display-Name: PhotoKit
 XB-Maemo-Icon-26: iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABHNCSVQICAgIfAhkiAAAAAlwSFlzAAALEwAACxMBAJqcGAAAHWBJREFUeJzlm2uQZddV33/7cR731a/p6ZnpeUqakSzrYVkgsAThIapikwLkAiSbGMcUBicpg22KKuwYMLGTCKVSTllQqqRScWwVRTAygiRWYRuDwZIB29iWLI2lkTWad8/0TD/v+579zIdz7+3u6RkhqeATu+tU33PvOfvs9d9rr73Wf60D/8Sb+Mfo9GMf+9iPhRB+Dpjw3h8BiDEeeiV9CCFOASilXgBaUspPvu9973vsH3iorx6Ahx566A5jzLustT8eY9zV6XQoioJ+v89gMCCE8A85TqSU5HlOpVIhyzLq9TpCiItJknwmTdP/8e53v/vvXk2/rwqABx988Of7/f7HrbV0u106nQ79fv/VdPWqW6VSoV6vU6vVSJKESqXyzve+973/65X284oAePDBB3/eOfcb3vtrLl26RLfbveq1xpitDxICpRQxxi3fb9aU0W9CiG3XvVSr1+vs3r0bIcTJLMv+46/8yq+8bCBeNgDvec97Pnf+/Pk3djodLl68iLWGJNEooUBCtVpHiLK7NE05cODAFuGKosB7j5QSIQRaa2KMaK2RUo4FB8bXXA7iqCVJsu07KSWzs7NUq1W01p//tV/7tTf9gwDwwAMPPGCMef8nPvEJTp48WX6pUq65/Ufp9Vp4Z/GmoH3xOK7fgujJ0pS3/ezP4r0f9/P000/z5JNPvpwxAZDnOW9+85upVqvjfkYAfe5zn2NxcXF8Xq9XaDRyvI+EAFprbrnlNvbsmf/PDz/88Ade6jny7xO+KIr3Ly8vj2dD6JzpvTegdQXbbWP7PUKwVOq7yBpzCJ2DEIQQiDFuOkptUKqKzmoIlYNIAHXFZyulCCFs62czEDFGZKrIJ3IqMxmTuyeY2NmgMply8tRxXnjh+fffd999D7yUjPpqP9x///2/3e/337+0tESn0ynVWSRUqtPsPnQrWsD1t9zBzJ7refHZv2PxxWdIqtMEALO2ZcAAfnj//uuuJ01qLK0u4p3DGEPR60LoEb3buN57vPfb+tkChAKZpeS1GmmakmUpQgryXHPu1BJLK5eI8P6f+qmfio8++ui/e0UAGFN8YGlpiWazOV6jSE2aV6hquPUN30+S52SNHeyYqfP5hVMMBq0tA92yFQqFyhtkjRnuuvMHufk11zFwA06dPMO5s6f4wp9+Di96RNcFSiFHAIz6GY0jxggCdJJQ0RIVAm/43tfyuu+5hc/93z/HxUC1qmk1uxQXzuOs/wDw8gG45yf+5WdPnjyBMeWMhBCoTu5Brxi6rTZC5Lz17sPc/NobWFpp81/+21H27D3E6Re/Tb06g4m9bQAopQiuoNVa58zZU7zrHT/KoX372DW3k2eeeZZb77iTo08+w7e++XUWz51A0BmDMOonhICUkiRJEEpCpvGJYmAdb3vTD/ADd7+V77/1bn79Ix/EDCTWO9abHRbOnue+++777COPPPKjl8u6zQa89a3/5h0rSytvcs6P12AIgaJzCWd7RDytpfNIWUFEQTWT3PKa64hCIryhvXoBM+hvuTeEgIiR6ArWl8/z3DNPcfSFU5w4eZpur8e+vfMcnJ9DaEm1sZNKZXbL2t/cT4wRIQRCSmIofxep4nce/hN+88O/xL//7Y9w8sQy7U4LEz1eRHzwrKysvOlDH/rQO/5eDVhbWf/N9eYqB+L0trWXJFUaE1MsXTjBp/74cY7sn2FmZgrvJL7fxrsCosX7uG3tSikgOorOOqve8IefepR/9n13cnFliR07diCUp9vuoKUkqdawfUmMG0JvbqWfAAGw1tHsdFjrKk4s17nl9luYmTvLZx57DDswpInGKUGz2cQY85vAw1cF4N573/mOC+fPXLdw7iw333rdZQ+OWNdl19x3sbJ8iWPfOUlrrUOqznLizFl63Ta2GKCVwAzV9nIAAYIdMHCGv/6rv+C5bz/N/L59TNZnaBeWZrPN2uoq3hWEAM5tN4JjzXAO4SUeiAPLgSM38a53vpfm8hlOHzjPcs/x1Fe/wqVzC8QYWVhYwFp73Yc+9KF3fOQjHxmDMAbgvvvedvvZ089/8syZcxRFjxDCln08RiAMeO7oF6nW9/D801/jZNqg31uiUm3QaXfwQWAKi9Zq2/1bWgz0W8sstJZZePE5hJAIrVBC40N5jxIRP+xjsy0Rwy2WCKFvEYnCGdi792bWl08wVct450/eQ4pAInii9Rc0OxfodrssLCwwPz//yQ9+8IPP3H///d+ETTag02r9Yr8/YH1tDR82kB8dIwucJIJe5xy91iLNlROYQY92q0nRX8EVLYgBIeS2+3kJzzbGQLAWa/oEZwjO4L3HWTt2iy/3BUazEp0H6/jWNx+n33Xs3bMbEQVze+Y5cP3NNHZMQSw1sNvtYozBGPOL2zQAwj2RQK2WMyjMVVXYWgtAr3eRSqWGDwLXi4ToAQsEvBOEGIgjqSPjmX0lbWQALx+H1puHHclqFZYXF/jUp/+AierbubCwQBhA++wZ6lkNocQYyF6vh1LqHuDfbgHgyA2H90xOT3Dw0D6882NBR21ubg6lFG7ovPT7JZreu3J2t6zTofWOG6q7+fPLaZu9vSsFTFuAcpG1tTY7pg3/9cHf4fbv+RGuveYALzx7jOg8OknG2tPr9ahWq3tG944BePTRRzl37ty403vuuWfLGt63bx97986zcP4iALValWqeU8lSlJJ4KbZEFoUptgxyft880zPTeOcxztBtd7HGYqzBOkuv28M6i7ce51xpQ4LHR1+CN5TbObehWcNmigEnjj7N6ePPM7NrnqPfOUW/eYlEpxDBGksiNc45ut0ueZ6P792yC2hdXjRC+nK0Y4ycePEszWYLmWXsn65z/Y4pJiYbnG71mZ6skTYq6DTbNsgQAkor8mrOpJxkfn6eGEZLRACl0+OcwzlHr9cjy7NyPJu6CjFQrVapVquEEMZghRDwg4Kl02XAprQsFTNECBu+BJSR6TYAQgikaTr2vkYCj4WnNGRSK5CSNElxLmCMxVpDu9UkVx5yjcySLfcKBEtLSxx9+ihJkqCUIs0zJqbqTDQaCATBC/I8Q2tNlmZMTk1usfibx3nttddy8ODBMVjWlMSMNQY7XqJ9rLVYa7fIE2NkMBhsBeBnfuZn3vj444+TJMlVgxAiCAFSlaqeKkhTzYEj88xM1XluZR2pBQFPJBLYuuYjEWcdLgwDnn6HvK7wTuMiHH/uBN5FUCCFJMsyXv9dr2dqcmrrNohgbX0NqSSJTkiShFq1xuzsbOkhDm3HZu/RWosxBq116dUWBe9+97vf+NBDD31eA9x1111vP3r06LgDYwzOuW37uBiplBAUdoAiZf9EzkK7TV5VyDTipMUqSxSbtr4IUUfIGW+80zOT7D2wmwO7d5JnCUmqeP47J7ADR5CBvukzMAO88HiG4wigE83i0iInXzw5NL685BY7YqJqtRqvf/3rybKMGCPGmLcDn5cAd99992SapgghxmzM5XtvjJHI0A8XkCjBD73uGm6/YQ+3HJxFJ2BVwKlQDlp4vCyPIMrvUEOd05BkmnotZ2JHlbn5WSr1jLyWlQCpIVACwugvBoIYbq2ja/Twv2IbtTM6jTGObcpIk4Y7y+R4CRw7dux6Nt0w+r99yxHEITjv+8W3c9PunD/5s7/k4I03kqVgtUcmAacciFLtRRQgIaQB0g0NSDJFfbrK/IF5ZndMI7/xLXQlge74UQRVCh0IG6pNQEgx5FHEWMNKNROI8sFEttqOERAjuZxz148B+MIXvkCv19vidl4ZABAECIHb33A7R64/QHb4MK99/W2s/+5/4K+/dQyVOlzqCUNvUsTyLpe4jSUQIKZQmcjZf+0BDh48RPrY51GZghHdF8ArT5CBoMJY1YUUBBUQiUQKjQgCvECWFMEQAIEk4kLAe0e4gjaPmgZ46qmnrl9ZWaEoCoqi2GJALterGAI7d8/x8P9+hB//sR/mB/753ehE8NM/9zYmv/w1Hvjlj3HN7t0c2HeE3XPXI5Smb1pUzQXcjGeps4qLhr4pOHNpkVbwZDtnWY8tioqBqeGMOjC5wVQM3oUSyABBB0LFk0xXSFWO8pFMKOYqU9SSlDzNKApDqzeg2+szNdng8JHDfPaLf0nYFFobYzY0oNfrMRgMsNaO/YArhaFjzzZG/urxr1PJc+76oe9DyoToItdcdxghYWB6BOtZX10gRM9g0MV7R+4kdZ9inCSuRY79zSk++uRDXLP/EdZXC+q+ho6CIDy+IvEm0Ov1iARkqhGJINECl0eSRkaqNDvzSfZOzPG9h/Zx5MA81VoFM3D82eNP8uLCRXSSUk2rZXyyiVMYTa4G6Ha7DAaD8fY3EvJKGqATTa/XQycSpGDp4gXyiSrHvvZVvvTCaSLQ6XXodtcgePrBEKKnZwb0TDG0yhCkQIsUEQSnziwzOTEJOGrVnEpepVabIhYGd3pAMejQCl1EItFpgu93EcGTN2pMT0+xa6rOT779Jzhw4x1oXUE4Q2f1oxAEz545x2f+7LNjn2IzwTIGALYnMq6oAZTbYGEsnVaXyek5pFCceuE7/Pk3jvOVb3wNpTXdwrE6aNJ2fUIURCHxfoD1Fh89UimcdwgdyLKcLK8wOTNNcI4sr5CrHN0c0BkEBoXDmUjsB7zrY6wnhkASHNmOWZz01GoZjbkdqMlZlMzRweKMp3CB9W4bqRMwbot/swWA+fl5pqenSXSCThOkEOOlsLlJKcjzhLSf0JjYRbvT4ctff5ELy5eY23eA5NvfJsQ1goNTi+epZhqlFIlK0InGx0AUglRnTNVnqNfr7Ni5i6npObIgUH0DxtPtdWgWBTJNybRGqoTC9BkUJT9QeEsk0ul2UWnOt45f4Ld//XepyEDR79Nc7/LN0xdo9zoMBhbnHdYE/NU04OTJ0ywunkcrjU40WmtuuummbZ5gFIKDB/axf1+gW/Q5d+4cK+vLyEQwc2CWmYkaS1rSxxMdFHiEcjhlyFWNNEnRWUaWpuyYm2Viao6ZHXuYrtZxS6skKscpS+ED3lr6hcdrSVSSEMHFiCcghYIYMIVhbX2NZtFk+dwyiVIUgwGmKGh3+1gbCD4QYyBGV/IHV9KAuT3zXFpdxwbPoNMdW7vNACwuLtJsNqlUKqR5ysRkg2ZznVYXZKK42LuEl5IoFGAhgLMREcp+ciFIs4xqfQIQ1NMas41p9tZm2ZVmdBqC1qDHSm+Znre0QznLidQEGYnC4WOgklc4cvgGnn76SawpsCJCH7rdNsFF8IHgYym4C8PtOCA2LevtRrDdZP/eOVqDgqUFi4hu235ZFAWrq6vjc6UVKlGoXJFkCbXdNUQmN4iPkYsqS3c0r9TIKjUq1QkqlYw8rXCoOs2dew+x1m4T2n0WBgO6OAZaklZSdBSgNP1QEEMgzzJ8iJw4fQKkxBYG5w1yIIhFBAfRl9FfDHErTxHFtkzTGID//sEP0G80eOgTH+do+jynT5wkhKsQEQKEBJ1JEBHvLDYUtM63IAPpNnxSIaFSkdQnG7z2dXcyMzPLoUP7UIXle2f3sHfvXi41W4jUouo72Ttbp76yzERzjTOLgU6/Q/AF0XvSpIJXAefK8yxN6YQ+0QS8YURGwdVoSDY8wc18pQb47h+/hz/908eopzl2MADE2JMbtXFgJCizwlqDKkEWeLy0QxZoAyiloZppMqW45trruGb/QWZURmdpgfrcHGpqgqyaMtWvUnWRxcVLaAHr/Q7EADEgo0ApiXWWLKuCiDhrAMHs3CxkCa5t6a/0cYXDW18ebjsSmym2LUugMtHg6AvfwXoLIULczgeMfHGBQCpJlmeoRBFFpLAGUjDBbLjfEhItyXRC9IHDExV+cG4XRgRaDcH0wV1YYO/u3XRWO6y1unSnDMZ5as0piuDLpwmBRiFEmWCNQQASHwONSpX67BRqUiB2SoINeFPSed1WF1MYjDFYY0uH6grusAbwztGo1zl55ixrzRZwZTJyBIRSionJBtPT04hEsLSyxFp/FSckXoRS+FSilaQwjlQoJrXCpZGA5+D8Yabnd4EQOOeh7jAB0rV1YvRUdIrQKRmS4CPeFqgkL+kzW1Au88jF8xe5tLZKFlPqSZ1MZSQ6Ic9yGntKomVkCwb9AVLJK2vAV//6iWOfeuSR15w6dZZBryx1uRyAkQYgImma8p5fehdveuO/YM/ePaz21nj7L/wrjp08Tm+thdaCamMHUimqqWbXjh38wWP/D/GZ/8MbXnMjb3nLTzM1ewtSKqy1TExP0TxxkqyWkCqFdwU700m6oUfhB3iRUJ3cQa/bxiPwxmJ9aZit69MewKpZR0SFFGWQlCRV8BHnDMFZvBtw8OBBpqenR7IdGwPwsY9+NDaXViFEpAYp06tGgzFEOu0uH//47/Ps88/x5p94E5dWz5FISZ6lxLyCQlOp1pBSkmrNwILC0+x0aBeOEwtLvK4xgx0U6LQsbMirGXmjQhE83U6PIgwYuD5928cZRxgG/jEGGOYHNw8vSSsoJFJlpEmVPK3irMEag3eG1loXa81Ym733cQzAV548+tza2sqNzvkynOTq4XCM4KxjYWGRL3zhyzz51DFkEjl+9jhd32d3YxeJrDA5Oc3szCy5lBhjmJxuMNHp0Ng5y8Jqk8Uzp2kuXuA133MnKolkWZWVSyu0XZe27NMyHTpFSb0HF7A+lAnYJCN6j5QKgSwNpUrRIkGKFKU0qU5IpAApCEoRnCiv3SRXjPG5MQDG2ZZzZSQohCC4sA2ArQQpdNptimLA0vIlpJYU0uCFI5muUq9MMbtznhtmr+Hgzll6UnL3G+9kqdfjwMFdiBjot5s0JncQgkWKhLViQNcbLi1dBOEJBJQCosd7R7/bAQRJVsGn4Gyb0R6kk7zkBRCkKiHPUlT0ZcAlJVYKoignb1OmqzUGYG525vd6ndbPbd4frxYMjRDwriRPGVCyM9WytyAkKqlwfZxgaqBIbM6NB65hZ7aP7755F7ohKbRAKwmuSwiCvuvRHwwoBOzYv4vBwgAXIoXxFMZiiqJUZ2vp9jpE54gIYlouV60ylBPU8gq7Z+c4tG+etbUWKyvrrKyulTq9af8fMkK/B0OC6tlnn/3i4cOHOXLkCNdeey3z8/Njdmiz9zSe/s1tMxc3BEYYQ3QFK67DaqtDs93n+DPHeOpvn+HJz3yWXKVEFOhJnHc0W216ps/y2iXOnT1DQGCcIxARSpJnCda64Q5d8oPGFEQfkbKsMUqTjKmpKW665Xp+6Zd/gYlGFWIgBId3FinlFjmeeOKJL44BAMYJhizLmJmZ2TbpeZ5Tr9cZkad4yiOwhZmNRFSI9INhZnIn03v2cHHxEmfOnuHEd86x1kvorrUQQL/XQaQaLyKF6TG7dydpJWP1wlKpYc7hfKBvfMlFEhES0jQpxzBMuooIiU6Znprgvnvv4a4f+mF27d6FdRZjLSE4Qtig+zbnFsefiqKg1+uNqfHJycktS6DRaNCYaOC9xzpLp9OhMAXWWay32FAGQEpItA8sD3rkFy8S+pL+oI+qHqLS6bEW1zi53OGmiRpaRYp2i2f+9suYZMD8zjlae+ZZPH8BIWLpS0eBtZYY/RBeKPww9xBBRQ8iIKUgUZqdu3eRknHh/AX6/UFp+eOYI962rMcAaK3HiZErZWWLoigzKqL0BtM0JatmKKWQWiKrEqc96SVL6LRYdZFer4tcOUGeVpHWsFjPOHjjYZb/+LM8tnCKu+58A6sXF0gSOLd8grVGyosXFpAWCIFqVqGiq3S7rY0xbXLSyggv4nyBV5bl5WU+/FsPoIl8/ZtP02y1ccaWCVw24qKxT7MZgCRJTlvrDnrvr1iqOtIMMVRF5xzRDTn6TUyv7HlsCMQ8JwpIY0QCK73zCKM5/2SfNJUUvs0nf+9hLvku187Pc6A+yeDCOt3uOisX1yh6A/qDJs7ZMkUgyg06xkgMYUu0F0Ogb3q0WopTJ85Q9Ae0O22cMQRf2gGG9yqlAE5fCYA/yjL/q2bI212pCSHGGjA6j6Lko33weBcwztHzBUnRQ8UE5z2EyHqIzOY5TVdQk5JjxSqr7SZJnvHUi8dJ9+7n3NISXTugV3QZFBZnLcYWZXwyUuI4PA0jzqIEwxQF68ZhCoMtLNZYvLfl72xQ/UophBB/tA2ARqPxcFEUv5okybbagM0asMXqiyFPLwJSSKIEFwOFM0Q7QEZHcA6CJw2Rc8agVI9MCgoM3WIAtgCp+ao/iY7QarfounLgUkpSIRn4otSw0RoOYRi0idLSR08MGhcdrXYbby3GDLh8zW9UuSTba4Qef/zxZ+644463xBj/MF6hmGGUNhsnY8RwBmREIokyEgW46OgZw6DjUEmClgld2cHktTJcF6B1AlribFlA3TN9lpsaiEgiFSTKR0J02OBGHgzCA74MkyOQao3INbZr6ffa4NiSj7x8/EmSkKbpW77yla88s2kOt7abb7rpaGHMTePq0GFzzpWaMbxDalkWKxLxeJx0+MRTnFuHpiXJMqRSKJUgBGQ6JQpBEAKShKxWpSj6BO+x3jE1OUNUKRcWT5FIQSJUaZCHGR6CI4Rh4VRwmMIzsWeS6f0zhH6gaBbYgS2XgLWYntlC6Ay3929fuHDh5s1ybasTFFJ+WGv9yOU5gc1LQAjIsrTM9Sca6wuapo0QAhfAx4DwFkk54CgEhlBa4QjCayyl4N6X8cf6+jJpdYoYIj6GEujgS25PlOQmMSJiJIRyBygLKjxKSCYmJxATw7ygjwx6g5ILKMrUeEmOxg9vk/fyLwBuvvnmT1trf9o5N3YaRtUbJUiCiakJ0jRBaokPjpXeKkU0rJ1awTQLMilQogxIUBKkKgGQAikFUepyTQeHkKLMEwiJkgk+WLSUZf4zloXWcczlBYwPeBfJd+TUdtURVpD4BIVCyfLQUiPFhhYrqf7o6NGj974sAADuuOOOODMzwwsvvECSJNvr/gQIVb74gAATizIVriJRRpTWeOvwhcP2Lb31Hq5wRBcQxLKadMgvCiEQWhO9Qw61TAlZEhrD+qCy3CDihgVY3kFltkJjTwOMQBo15ATL60flN1qWNP/p06evKOuVi/WBnTt3utXV1buTZKPcJca41R+I5Tbkh9RzhDId7ssHK1kyxlk9pzJTozpTJZ+sktTSYaFFJDgIPhJFLOnsEMdGb1wQOQ5hR5/LZyeVhLyRI4JERYUcUmhlNYso8xxao7X+jbW1tSdeEQAXL158Yv/+/Q64Gzbe7dlchjKKskT5wzg3LxBoqSGA8AIRyt+01iRpQlbLqMxUqU7XqExXSOsZhEiiJcFFgovEMgvPqMgyjg4Y25KkkpBNjgCQCCRKaqQswdBaoxP9Gy8ef/E/XU3OqwIAsLi4+MT8/LyNMf5ICGGL8CUAG4iPFpNzDmddSVgMCxYEYqwZwjMGRElFkifktZzKVJXaTJV8skJaT9BS4AMEF4ZADB+6aXvTuaYymSOjRKHKGVeaMoyQCCl+/cTxE/e/lIwv+6WpW2+99RHv/b1b4oQ4Ck9KvyASMYMyAJFSjMcbgaiG5TeyJFVVUvJ3w6qGsV+x5XxYJoMcvkFiPa5wmL6hs9whqSZM7p1EOkUSUipJTiXPqeb5p7/8pb+57+XI9Ypem7vtttvu9d7/VgjhpssLKEZA2KIsTysVZYOJ8YTx5AnBcDeQ5aEkSquyAq30tbcAcjkYAP1Bv2R2hEKLhLQE4Ns7pmY+/KUvfunTL1emV/Xi5G233XavMeYR2MKxlVbaDPB2mFmWpUBl2dzGNQB+ZFiHgEgpUbos0JJKobQqa4E2gzD6TMSGkuQQUSCCoprm9z37jWdftuCj9pI24GptcXHx2YMHDz4K9GKM80KIqZGbHH0AH8s1WKZRkEJu7B4IhJDDfW1kIYZZGx/wblj96T3BDt87CKW7XVLe5XoXQaBQp1Si/meqa//6uW8c/atXI8ur0oC/r73uhpt+OKj4NoGY8M7dCBIpuTmEgBtqQRTgwrCYijh8/WXoAUYQxKMe0Eo/JxAtBL9/+sXTf/mPMd5/0u3/A5QIyNflGw+8AAAAAElFTkSuQmCC
