@@ -1,5 +1,6 @@
 photokit (0.3.6) unstable; urgency=low
   * Add google image search
+  * Bug fix: crash when playing slide
 
  -- LucasWang <wbsecg1@gmail.com>  Sun, 15 Jul 2012 04:32:57 +0800
 
